--- a/css/common.css
+++ b/css/common.css
@@ -118,5 +118,132 @@ section{
   font-weight: bold;
   font-size: 40px;
   line-height: 78px;
+}
 
+.menu {
+  display: none;
+}
+.drawer-nav {
+  display: none;
+}
+
+@media screen and (max-width : 768px){
+.logo{
+  width: 60px;
+}
+
+header{
+  height: 70px;
+}
+
+header ul{
+  display: block;
+  list-style: none;
+  color: #18CDCA;
+  font-weight: bold;
+}
+
+
+  .title h1{
+  font-size: 25px;
+  height: auto;
+  line-height: normal;
+  }
+  .title>p{
+    font-size: 20px;
+    line-height: normal;
+  }
+
+  .title{
+    height: 200px;
+  }
+
+.header-nav {
+    display: none;
+  }
+
+  .menu {
+    display: inline-block;
+    width: 36px;
+    height: 32px;
+    cursor: pointer;
+    position: relative;
+    z-index: 10;
+  }
+
+  .menu-line-top,
+  .menu-line-middle,
+  .menu-line-bottom {
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: #000;
+    position: absolute;
+    transition: 0.5s;
+  }
+
+  .menu-line-top {
+    top: 0;
+  }
+
+  .menu-line-middle {
+    top: 14px;
+  }
+
+  .menu-line-bottom {
+    bottom: 0;
+  }
+
+  .menu.open span:nth-of-type(1) {
+    top: 14px;
+    transform: rotate(45deg);
+  }
+
+  .menu.open span:nth-of-type(2) {
+    opacity: 0;
+  }
+
+  .menu.open span:nth-of-type(3) {
+    top: 14px;
+    transform: rotate(-45deg);
+  }
+
+  .drawer-nav{
+    display: block;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: -100%;
+    background: #fff;
+    transition: .7s;
+  }
+
+  .drawer-nav-list {
+    padding-top: 50px;
+    text-align: center;
+  }
+
+  .drawer-nav-item {
+    margin-top: 30px;
+    font-size: 18px;
+  }
+
+  .in {
+    transform: translateX(100%);
+  }
+
+  .footer_menu {
+    display: none;
+  }
+
+  .footer_privacy{
+  font-size: 10px;
+  padding: 10px;
+  display: inline-block;
+}
+
+section{
+  padding-top: 70px;
+}
 }
