--- a/css/company.css
+++ b/css/company.css
@@ -42,3 +42,24 @@ td{
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
+@media screen and (max-width : 768px){
+  .table{
+    font-size:28px;
+    padding:50px 0;
+  }
+
+}
+
+@media screen and (max-width : 480px){
+.table{
+  font-size: 18px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+td{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+}
