--- a/css/environment.css
+++ b/css/environment.css
@@ -20,3 +20,53 @@ h2{
 div>p{
   margin-left: 20px;
 }
+
+@media screen and (max-width : 768px){
+h2{
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.environment_content{
+  padding: 50px;
+  width: 100%;
+}
+
+.environment_content>div{
+  display: block;
+  margin: 0 auto;
+  font-size: 24px;
+  text-align: center;
+}
+
+
+div>p{
+  margin: auto;
+  text-align: left;
+  margin-top: 20px;
+}
+}
+
+@media screen and (max-width : 480px){
+.environment_content img{
+  width: 300px;
+}
+h2{
+  font-size: 20px;
+}
+div>p{
+  margin: auto;
+  text-align: left;
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+.environment_content{
+  padding: 10px;
+}
+
+.title{
+  height: 100px;
+}
+}
