--- a/css/member.css
+++ b/css/member.css
@@ -80,3 +80,33 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width : 768px){
+.member>.position{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.member>.member_name{
+  font-size: 26px;
+}
+
+.member_list{
+  padding: 50px;
+}
+}
+
+@media screen and (max-width : 480px){
+.member>.position{
+  font-size: 26px;
+  margin-bottom:5px;
+}
+
+.member>.member_name{
+  font-size: 18px;
+}
+
+.member_list{
+  padding: 20px 0;
+}
+}
