--- a/css/privacy.css
+++ b/css/privacy.css
@@ -16,3 +16,39 @@ p{
 h2:nth-child(n+1){
   margin-top: 30px;
 }
+
+@media screen and (max-width : 768px){
+.privacy_content{
+  padding: 50px;
+}
+
+h2{
+  font-size: 30px;
+}
+
+p{
+  font-size: 24px;
+}
+
+h2:nth-child(n+1){
+  margin-top: 30px;
+}
+}
+
+@media screen and (max-width : 480px){
+.privacy_content{
+  padding: 20px;
+}
+
+h2{
+  font-size: 26px;
+}
+
+p{
+  font-size: 18px;
+}
+
+h2:nth-child(n+1){
+  margin-top: 30px;
+}
+}
