--- a/css/recruit.css
+++ b/css/recruit.css
@@ -10,6 +10,10 @@ h2{
   margin: 20px auto;
 }
 
+.recruit_content img{
+  height:250px;
+}
+
 .recruit_content>div{
   height: 250px;
   background-color:#18CDCA;
@@ -42,4 +46,81 @@ h2{
 
 section{
   padding-bottom: 100px;
+}
+
+@media screen and (max-width : 768px){
+
+  h2{
+  font-size: 28px;
+  text-align: center;
+  padding: 50px;
+}
+.recruit_content{
+  /* display:block; */
+  width: 100%;
+  margin: 20px auto;
+}
+
+.recruit_content>div{
+  height: 250px;
+  background-color:#18CDCA;
+  color: #fff;
+  font-size: 28px;
+}
+
+.recruit_content p{
+  font-size: 20px;
+}
+
+.occupation{
+  width: 99%;
+  padding: 30px;
+  margin: 0 auto;
+  border:1px solid #18CDCA;
+  background-color: #fff;
+  font-size: 28px;
+  margin-top: 20px;
+}
+
+section{
+  padding-bottom: 20px;
+}
+
+}
+
+@media screen and (max-width : 480px){
+h2{
+  font-size: 26px;
+  text-align: left;
+  padding: 20px;
+}
+
+.recruit_content img{
+  height:250px;
+  width: 100%;
+}
+
+.recruit_content{
+  display:block;
+  width: 100%;
+  margin: 20px auto;
+}
+
+.recruit_content>div{
+  height: auto;
+  background-color:#fff;
+  color: black;
+  font-size: 28px;
+}
+
+.occupation{
+  width: 99%;
+  padding: 30px;
+  margin: 0 auto;
+  border:1px solid #18CDCA;
+  background-color: #fff;
+  font-size: 28px;
+  margin-top: 20px;
+}
+
 }
