--- a/css/about.css
+++ b/css/about.css
@@ -1,16 +1,4 @@
-.title>h1{
-  font-size: 60px;
-  line-height: 78px;
-}
-
-.title>p{
-  font-size: 30px;
-  line-height: 50px;
-  text-align: center;
-  margin-top: 20px;
-}
-
-h2{
+.about_title_menu{
   font-size: 60px;
   text-align: center;
   margin: 100px;
@@ -79,6 +67,7 @@ h3{
 .about_content p{
   font-size: 20px;
 }
+
 
 }
 
